# system-test-suite

./: Makefile
docs/: generating-dm2-rootfs
gsm-utility/: gsmd-dm2.patch
gta02-dm1/: README
gta02-dm1/alsa_files/: gta02_gsm_receiver.state  gta02_music_headset.state  gta02_music_speaker.state
gta02-dm1/alsa_files/.svn/: all-wcprops  entries
gta02-dm1/alsa_files/.svn/text-base/: gta02_gsm_headset.state.svn-base
gta02-dm1/dm1-uboot/: add_dm1_build_item.diff  add_dm1_patch_neo1973_set_charge_mode.diff
gta02-dm1/dm1-uboot/dm1_test/: Makefile  cmd_bkbatt.c  cmd_chg.c  cmd_earphone.c  cmd_hdq.c  cmd_key911.c  cmd_keypower.c  cmd_nor_check.c  cmd_sensor.c  cmd_usb5v.c  lis302dl.h
gta02-dm1/kernel_config/: defconfig-2.6.24-DM1
gta02-dm1/kernel_module/: gta02_bt.patch
gta02-dm1/kernel_module/.svn/: all-wcprops  entries
gta02-dm1/kernel_module/.svn/text-base/: dot-config.svn-base  gta02_gsm_dl_off.patch.svn-base  gta02_pcf50633.patch.svn-base  gta02_pm_gps.patch.svn-base  gta02_wm8753.patch.svn-base  setup-kernel.sh.svn-base
gta02-dm1/kernel_module/dm_patches/: dm_applied.patch
gta02-dm1/kernel_module/dm_patches/.svn/: all-wcprops  entries
gta02-dm1/rootfs/: Makefile
gta02-dm1/rootfs/.svn/: all-wcprops  entries
gta02-dm1/rootfs/config/: def-busybox-config
gta02-dm1/rootfs/target_rootfs_data/etc/: fstab  inittab
gta02-dm1/rootfs/target_rootfs_data/etc/default/: gsmd
gta02-dm1/rootfs/target_rootfs_data/etc/init.d/: gsmd  gsmd.backup  rcS
gta02-dm1/user_space/: Makefile  audio.c  backlight.c  batt.c  bluetooth.c  dm_init.h  gps.c  graphics.c  gsm.c  key.c  lcd.c  led.c  main.c  rtc.c  sdcard.c  sensor.c  touchpanel.c
gta02-dm1/user_space/.svn/: all-wcprops  entries
gta02-dm1/user_space/.svn/text-base/: Makefile.svn-base  graphics.c.svn-base  gsm.c.svn-base  main.c.svn-base  norflash.c.svn-base  rtc.c.svn-base  touchpanel.c.svn-base  vibrator.c.svn-base  wireless.c.svn-base
gta02-dm1/user_space/gsm/: Makefile.am
gta02-dm1/user_space/gsm/.svn/: all-wcprops  entries
gta02-dm1/user_space/gsm/.svn/text-base/: crossconf.svn-base
gta02-dm1/user_space/gsm/doc/.svn/: all-wcprops  entries
gta02-dm1/user_space/gsm/include/.svn/: all-wcprops  entries
gta02-dm1/user_space/gsm/logs/.svn/: all-wcprops  entries
gta02-dm1/user_space/gsm/src/.svn/: all-wcprops  entries
gta02-dm1/user_space/gsm/src/gsmd/: Makefile.am  machine_generic.h  vendor.c  vendor_ti.h
gta02-dm1/user_space/gsm/src/gsmd/.svn/: all-wcprops  entries
gta02-dm1/user_space/gsm/src/gsmd/.svn/text-base/: gsmd.c.svn-base  machine.c.svn-base
gta02-dm1/user_space/gsm/src/util/: Makefile.am
gta02-dm1/user_space/libglamo/: Makefile  blit.h  dma.c  glamo-regs.h  glamo.h  hw.c
gta02-dm1/user_space/libglamo/.svn/: all-wcprops  entries
gta02-dm1/user_space/libglamo/.svn/text-base/: blit.c.svn-base  dma.h.svn-base  hw.h.svn-base  os.c.svn-base
gta02-dm1/user_space/libts/: Makefile
gta02-dm1/user_space/libts/.svn/: all-wcprops  entries
gta02-dm1/user_space/libts/.svn/text-base/: README.svn-base
gta02-dm1/user_space/libts/patches/: neo-builtin-modules.patch
gta02-dm1/user_space/libts/patches/.svn/: all-wcprops  entries
gta02-dm1/user_space/libts/plugins/: dejitter.c  pthres.c  variance.c
gta02-dm1/user_space/libts/plugins/.svn/: all-wcprops  entries
gta02-dm1/user_space/libts/src/: ts_config.c  ts_load_module.c  tslib-private.h
gta02-dm1/user_space/libts/src/.svn/: all-wcprops  entries
gta02-dm1/user_space/libusb/: Makefile
gta02-dm1/user_space/libusb/.svn/: all-wcprops  entries
gta02-dm2/: AUTHORS  BUILD_SETTINGS  ChangeLog  README  build  config.h.in  configure.ac  generate-test-rootfs  remote_install
gta02-dm2/data/: Makefile.am  Makefile.in  S99dm2  checkAP.awk  dialout  dl_finalimg  dm2  dm2.in  dynenv  envedit  environment.prep  final_check_public_key  flashimage  flashnor_check  flashuboot  gsm.xt  iperf  loopback_earmic_speaker.state  loopback_earphone.state  loopback_receiver.state  loopback_receiver_MIC2.state  loopback_speaker.state  play_wav_earphone.state  play_wav_receiver.old.state  play_wav_receiver.state  play_wav_speaker.state  pointercal  printCGMR  test-dialer  test_script
gta02-dm2/gsm-utility/: build-gsm.sh
gta02-dm2/src/: Makefile.am  dm2.c  dm2.h  dm2_Network.c  dm2_Network.h  event-names.h  gps.c  gps.h  gta02_dm2_version.h  nmea.c  nmea.h  tests-audio.c  tests-bluetooth.c  tests-cn.c  tests-gps.c  tests-gsm.c  tests-keys.c  tests-lcm.c  tests-leds.c  tests-logs.c  tests-mac.c  tests-motion.c  tests-pmu.c  tests-rtc.c  tests-sn.c  tests-version.c  tests-vibrator.c  tests-wifi.c
gta02-dm2/src/oltk/: Makefile.am  Makefile.in  font.h  font_8x13.c  gr.c  gr.c~  gr.h  gr_fb.c  gr_fb.c~  gr_impl.h  gr_x11.c  gr_x11.c~  oltk.c  oltk.c~  oltk.h  oltk_utils.h
gta02-dm2/tslib-1.0/: Makefile.in  aclocal.m4  build  configure.ac  tslib-0.0.pc
gta02-dm2/tslib-1.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
gta02-dm2/tslib-1.0/etc/: Makefile.in
gta02-dm2/tslib-1.0/plugins/: Makefile.in
gta02-dm2/tslib-1.0/src/: Makefile.in
gta02-dm2/tslib-1.0/tests/: Makefile.in
(+18 files in other folders)
